objects/AIA_Document__c.object
<CustomObject>
    <fields>
        <fullName>Zip_File__c</fullName>
        <formula>if(RIGHT(Document_Name__c,3)='zip', TRUE, FALSE)</formula>
        <label>Zip File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>approval_size__c</fullName>
        <label>approval size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>submitter__c</fullName>
        <formula>Implementation__r.Docusign_Document_sending_user_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>submitter</label>
        <type>Text</type>
    </fields>
    <label>AIA Document</label>
    <nameField>
        <displayFormat>FD-{000000}</displayFormat>
        <label>AIA Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AIA Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <recordTypes>
        <fullName>Non_Standard</fullName>
        <active>true</active>
        <description>Recordtype for all AIA Documents related to Docusign documents like BAA, BAC etc</description>
        <label>Non-Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Recordtype for all AIA Documents other than Docusign documents like BAA, BAC etc</description>
        <label>Standard</label>
    </recordTypes>
    <validationRules>
        <fullName>AIA002</fullName>
        <active>false</active>
        <description>Adj Summary Revision # should be available only for BD</description>
        <errorConditionFormula>IF(OR(NOT(ISBLANK( Implementation__c )),NOT(ISBLANK(  Account__c )),NOT(ISBLANK(  Opportunity__c )),NOT(ISBLANK(  Proposal_Request_Form__c )),NOT(ISBLANK(  Benefit_Request_Form__c )),NOT(ISBLANK(  Proposed_Products__c )),NOT(ISBLANK(  Benefit_Design_Form__c )),NOT(ISBLANK(  Benefit_Design_Product__c )),NOT(ISBLANK(  Workplan_Assignment__c ))),IF(ISBLANK (Adj_Summ_Revision__c ),true,false),false)</errorConditionFormula>
        <errorDisplayField>Adj_Summ_Revision__c</errorDisplayField>
        <errorMessage>Error AIA002:  Adj Summary Revision # can have value only if BD is not blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EDOC001</fullName>
        <active>true</active>
        <description>Adj. Summ. Revision # field can only be added to the Benefit Design NAEGS, not on any other document</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; OR(IF(NOT(ISBLANK( Benefit_Design__c )),IF(ISBLANK (Adj_Summ_Revision__c ),true,false),false),(ISBLANK( Benefit_Design__c )&amp;&amp;(NOT(ISBLANK (Adj_Summ_Revision__c )))))</errorConditionFormula>
        <errorDisplayField>Adj_Summ_Revision__c</errorDisplayField>
        <errorMessage>EDOC001: Adj. Summ. Revision # field can only be added to the Benefit Design NAEGS, not on any other document</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EDOC002</fullName>
        <active>true</active>
        <description>When BD status is in review, cannot edit the AIA DOC</description>
        <errorConditionFormula>NOT($Permission.Ignore_Validation_Rules) &amp;&amp; IF(AND(ISPICKVAL(Benefit_Design__r.Status__c, "In Review" ),  ISPICKVAL(Category__c, "Benefit Design")),True,False)</errorConditionFormula>
        <errorMessage>EDOC002: AIA Documents cannot be updated when Benefit Design status is In Review.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EDOC003</fullName>
        <active>true</active>
        <description>For Document Type "Unsigned Quote" Description field cannot be blank</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (IF(Text( Document_Type__c )='Unsigned Quote',IF(ISBLANK( Description__c ),true,false),false))</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>EDOC003: For Document Type "Unsigned Quote" Description field cannot be blank</errorMessage>
    </validationRules>
</CustomObject>